<resources>
    <string name="plausibility_threshold">0.065</string>
    <string name="auto_correction_threshold_mode_index_off">0</string>
    <string name="auto_correction_threshold_mode_index_modest">1</string>
    <string name="auto_correction_threshold_mode_index_aggressive">2</string>
    <string name="auto_correction_threshold_mode_index_very_aggressive">3</string>
    <string name="spellchecker_recommended_threshold_value">0.11</string>
    <string name="dictionary_pack_client_id">com.android.inputmethod.latin</string>
    <string name="dictionary_pack_metadata_uri" />
    <string name="dictionary_pack_settings_activity">com.android.inputmethod.dictionarypack.DictionarySettingsActivity</string>
    <string name="authority">com.android.inputmethod.dictionarypack.aosp</string>
    <string name="default_metadata_uri" />
    <string name="local_metadata_filename">metadata.json</string>
    <string name="suggested_punctuations">"!,?,\\,,:,;,\",(,),',-,/,@,_"</string>
    <string name="symbols_preceded_by_space">([{&amp;</string>
    <string name="symbols_followed_by_space">.,;:!?)]}&amp;</string>
    <string name="symbols_clustering_together" />
    <string name="symbols_word_separators">"\u0009 
 ()[]{}*&amp;&lt;>+=|.,;:!?/_\""</string>
    <string name="symbols_word_connectors">"'-"</string>
    <string name="symbols_sentence_terminators">.?!</string>
    <string name="english_ime_debug_settings">Android Keyboard Debug settings</string>
    <string name="prefs_debug_mode">Debug Mode</string>
    <string name="prefs_force_non_distinct_multitouch">Force non-distinct multitouch</string>
    <string name="prefs_should_show_lxx_suggestion_ui">Show LXX suggestion UI</string>
    <string name="sliding_key_input_preview">Show slide indicator</string>
    <string name="sliding_key_input_preview_summary">Display visual cue while sliding from Shift or Symbol keys</string>
    <string name="prefs_customize_key_preview_animation">Customize key preview animation</string>
    <string name="prefs_key_popup_show_up_duration_settings">Key popup show up duration</string>
    <string name="prefs_key_popup_dismiss_duration_settings">Key popup dismiss duration</string>
    <string name="prefs_key_popup_show_up_start_x_scale_settings">Key popup show up start X scale</string>
    <string name="prefs_key_popup_show_up_start_y_scale_settings">Key popup show up start Y scale</string>
    <string name="prefs_key_popup_dismiss_end_x_scale_settings">Key popup dismiss end X scale</string>
    <string name="prefs_key_popup_dismiss_end_y_scale_settings">Key popup dismiss end Y scale</string>
    <string name="prefs_resize_keyboard">Enable keyboard resizing</string>
    <string name="prefs_keyboard_height_scale">Keyboard height scale</string>
    <string name="prefs_dump_dynamic_dicts">Dump dictionary</string>
    <string name="voice_mode_main">0</string>
    <string name="subtype_in_root_locale_hi_ZZ">Hinglish</string>
    <string name="subtype_in_root_locale_sr_ZZ">Srpski</string>
    <string name="subtype_generic">%s</string>
    <string name="subtype_generic_qwerty">%s (QWERTY)</string>
    <string name="subtype_generic_qwertz">%s (QWERTZ)</string>
    <string name="subtype_generic_azerty">%s (AZERTY)</string>
    <string name="subtype_generic_dvorak">%s (Dvorak)</string>
    <string name="subtype_generic_colemak">%s (Colemak)</string>
    <string name="subtype_generic_pcqwerty">%s (PC)</string>
    <string name="subtype_bulgarian_bds">%s (BDS)</string>
    <string name="important_notice_suggest_contact_names">Suggest contact names? Touch for info.</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_previous_key">Prev</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_search_key">Search</string>
    <string name="label_pause_key">Pause</string>
    <string name="label_wait_key">Wait</string>
    <string name="english_ime_name">Android Keyboard (AOSP)</string>
    <string name="spell_checker_service_name">Android Spell Checker (AOSP)</string>
    <string name="english_ime_settings">Android Keyboard Settings (AOSP)</string>
    <string name="android_spell_checker_settings">Android Spell Checker Settings (AOSP)</string>
    <string name="use_personalized_dicts_summary">Learn from your communications and typed data to improve suggestions</string>
    <string name="spoken_emoji_00A9">Copyright sign</string>
    <string name="spoken_emoji_00AE">Registered sign</string>
    <string name="spoken_emoji_203C">Double exclamation mark</string>
    <string name="spoken_emoji_2049">Exclamation question mark</string>
    <string name="spoken_emoji_2122">Trade mark sign</string>
    <string name="spoken_emoji_2139">Information source</string>
    <string name="spoken_emoji_2194">Left right arrow</string>
    <string name="spoken_emoji_2195">Up down arrow</string>
    <string name="spoken_emoji_2196">North west arrow</string>
    <string name="spoken_emoji_2197">North east arrow</string>
    <string name="spoken_emoji_2198">South east arrow</string>
    <string name="spoken_emoji_2199">South west arrow</string>
    <string name="spoken_emoji_21A9">Leftwards arrow with hook</string>
    <string name="spoken_emoji_21AA">Rightwards arrow with hook</string>
    <string name="spoken_emoji_231A">Watch</string>
    <string name="spoken_emoji_231B">Hourglass</string>
    <string name="spoken_emoji_2328">Keyboard</string>
    <string name="spoken_emoji_23CF">Eject symbol</string>
    <string name="spoken_emoji_23E9">Black right-pointing double triangle</string>
    <string name="spoken_emoji_23EA">Black left-pointing double triangle</string>
    <string name="spoken_emoji_23EB">Black up-pointing double triangle</string>
    <string name="spoken_emoji_23EC">Black down-pointing double triangle</string>
    <string name="spoken_emoji_23ED">Black right-pointing double triangle with vertical bar</string>
    <string name="spoken_emoji_23EE">Black left-pointing double triangle with vertical bar</string>
    <string name="spoken_emoji_23EF">Black right-pointing triangle with double vertical bar</string>
    <string name="spoken_emoji_23F0">Alarm clock</string>
    <string name="spoken_emoji_23F1">Stopwatch</string>
    <string name="spoken_emoji_23F2">Timer clock</string>
    <string name="spoken_emoji_23F3">Hourglass with flowing sand</string>
    <string name="spoken_emoji_23F8">Double vertical bar</string>
    <string name="spoken_emoji_23F9">Black square for stop</string>
    <string name="spoken_emoji_23FA">Black circle for record</string>
    <string name="spoken_emoji_24C2">Circled latin capital letter m</string>
    <string name="spoken_emoji_25AA">Black small square</string>
    <string name="spoken_emoji_25AB">White small square</string>
    <string name="spoken_emoji_25B6">Black right-pointing triangle</string>
    <string name="spoken_emoji_25C0">Black left-pointing triangle</string>
    <string name="spoken_emoji_25FB">White medium square</string>
    <string name="spoken_emoji_25FC">Black medium square</string>
    <string name="spoken_emoji_25FD">White medium small square</string>
    <string name="spoken_emoji_25FE">Black medium small square</string>
    <string name="spoken_emoji_2600">Black sun with rays</string>
    <string name="spoken_emoji_2601">Cloud</string>
    <string name="spoken_emoji_2602">Umbrella</string>
    <string name="spoken_emoji_2603">Snowman</string>
    <string name="spoken_emoji_2604">Comet</string>
    <string name="spoken_emoji_260E">Black telephone</string>
    <string name="spoken_emoji_2611">Ballot box with check</string>
    <string name="spoken_emoji_2614">Umbrella with rain drops</string>
    <string name="spoken_emoji_2615">Hot beverage</string>
    <string name="spoken_emoji_2618">Shamrock</string>
    <string name="spoken_emoji_261D">White up pointing index</string>
    <string name="spoken_emoji_2620">Skull and crossbones</string>
    <string name="spoken_emoji_2622">Radioactive sign</string>
    <string name="spoken_emoji_2623">Biohazard sign</string>
    <string name="spoken_emoji_2626">Orthodox cross</string>
    <string name="enable_metrics_logging_summary" />
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_accounts">Accounts &amp; Privacy</string>
    <string name="settings_screen_appearance">Appearance &amp; Layouts</string>
    <string name="settings_screen_gesture">Gesture Typing</string>
    <string name="settings_screen_correction">Text correction</string>
    <string name="settings_screen_advanced">Advanced</string>
    <string name="cloud_sync_title">Google Keyboard Sync</string>
    <string name="sync_now_title">Sync now</string>
    <string name="clear_sync_data_title">Delete cloud data</string>
    <string name="clear_sync_data_summary">Deletes your synced data from Google</string>
    <string name="key_preview_popup_dismiss_delay">Key popup dismiss delay</string>
    <string name="use_contacts_dict">Suggest Contact names</string>
    <string name="use_contacts_dict_summary">Use names from Contacts for suggestions and corrections</string>
    <string name="use_personalized_dicts">Personalized suggestions</string>
    <string name="use_double_space_period">Double-space period</string>
    <string name="use_double_space_period_summary">Double tap on spacebar inserts a period followed by a space</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="edit_personal_dictionary">Personal dictionary</string>
    <string name="configure_dictionaries_title">Add-on dictionaries</string>
    <string name="prefs_show_suggestions">Show correction suggestions</string>
    <string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
    <string name="prefs_block_potentially_offensive_title">Block offensive words</string>
    <string name="prefs_block_potentially_offensive_summary">Do not suggest potentially offensive words</string>
    <string name="auto_correction">Auto-correction</string>
    <string name="auto_correction_summary">Spacebar and punctuation automatically correct mistyped words</string>
    <string name="bigram_prediction">Next-word suggestions</string>
    <string name="bigram_prediction_summary">Use the previous word in making suggestions</string>
    <string name="gesture_input">Enable gesture typing</string>
    <string name="gesture_input_summary">Input a word by sliding through the letters</string>
    <string name="gesture_preview_trail">Show gesture trail</string>
    <string name="gesture_floating_preview_text">Dynamic floating preview</string>
    <string name="gesture_floating_preview_text_summary">See the suggested word while gesturing</string>
    <string name="voice_input">Voice input key</string>
    <string name="switch_accounts">Switch accounts</string>
    <string name="no_accounts_selected">No accounts selected</string>
    <string name="prefs_keypress_vibration_duration_settings">Keypress vibration duration</string>
    <string name="prefs_keypress_sound_volume_settings">Keypress sound volume</string>
    <string name="prefs_key_longpress_timeout_settings">Key long press delay</string>
    <string name="prefs_enable_emoji_alt_physical_key">Emoji for physical keyboard</string>
    <string name="prefs_enable_emoji_alt_physical_key_summary">Physical Alt key shows the emoji palette</string>
    <string name="show_setup_wizard_icon">Show app icon</string>
    <string name="show_setup_wizard_icon_summary">Display application icon in the launcher</string>
</resources>