<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_screen_correction" android:key="screen_correction"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:latin="http://schemas.android.com/apk/res/com.android.inputmethod.latin">
    <PreferenceScreen android:title="@string/edit_personal_dictionary" android:key="edit_personal_dictionary">
        <intent android:action="android.settings.USER_DICTIONARY_SETTINGS" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/configure_dictionaries_title" android:key="configure_dictionaries_key">
        <intent android:action="android.intent.action.MAIN" android:targetClass="@string/dictionary_pack_settings_activity">
            <extra android:name="clientId" android:value="@string/dictionary_pack_client_id" />
        </intent>
    </PreferenceScreen>
    <CheckBoxPreference android:persistent="true" android:title="@string/prefs_block_potentially_offensive_title" android:key="pref_key_block_potentially_offensive" android:summary="@string/prefs_block_potentially_offensive_summary" android:defaultValue="@bool/config_block_potentially_offensive" />
    <CheckBoxPreference android:persistent="true" android:title="@string/auto_correction" android:key="pref_key_auto_correction" android:summary="@string/auto_correction_summary" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/prefs_show_suggestions" android:key="show_suggestions" android:summary="@string/prefs_show_suggestions_summary" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/use_personalized_dicts" android:key="pref_key_use_personalized_dicts" android:summary="@string/use_personalized_dicts_summary" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/use_contacts_dict" android:key="pref_key_use_contacts_dict" android:summary="@string/use_contacts_dict_summary" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/bigram_prediction" android:key="next_word_prediction" android:summary="@string/bigram_prediction_summary" android:defaultValue="true" />
</PreferenceScreen>