<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_screen_preferences"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:latin="http://schemas.android.com/apk/res/com.android.inputmethod.latin">
    <CheckBoxPreference android:persistent="true" android:title="@string/auto_cap" android:key="auto_cap" android:summary="@string/auto_cap_summary" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/use_double_space_period" android:key="pref_key_use_double_space_period" android:summary="@string/use_double_space_period_summary" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/vibrate_on_keypress" android:key="vibrate_on" android:defaultValue="@bool/config_default_vibration_enabled" />
    <CheckBoxPreference android:persistent="true" android:title="@string/sound_on_keypress" android:key="sound_on" android:defaultValue="@bool/config_default_sound_enabled" />
    <CheckBoxPreference android:persistent="true" android:title="@string/popup_on_keypress" android:key="popup_on" android:defaultValue="@bool/config_default_key_preview_popup" />
    <CheckBoxPreference android:persistent="true" android:title="@string/voice_input" android:key="pref_voice_input_key" android:defaultValue="true" />
</PreferenceScreen>