<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_screen_accounts"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:latin="http://schemas.android.com/apk/res/com.android.inputmethod.latin">
    <Preference android:persistent="false" android:enabled="false" android:title="@string/switch_accounts" android:key="account_switcher" android:summary="@string/no_accounts_selected" />
    <CheckBoxPreference android:persistent="true" android:enabled="false" android:title="@string/cloud_sync_title" android:key="pref_enable_cloud_sync" android:defaultValue="false" android:disableDependentsState="false" />
    <Preference android:persistent="false" android:title="@string/sync_now_title" android:key="pref_sync_now" android:dependency="pref_enable_cloud_sync" />
    <Preference android:persistent="false" android:title="@string/clear_sync_data_title" android:key="pref_clear_sync_data" android:summary="@string/clear_sync_data_summary" android:dependency="pref_enable_cloud_sync" />
    <CheckBoxPreference android:persistent="true" android:key="pref_enable_metrics_logging" android:summary="@string/enable_metrics_logging_summary" android:defaultValue="true" />
</PreferenceScreen>