<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_screen_gesture" android:key="screen_gesture"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="true" android:title="@string/gesture_input" android:key="gesture_input" android:summary="@string/gesture_input_summary" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/gesture_floating_preview_text" android:key="pref_gesture_floating_preview_text" android:summary="@string/gesture_floating_preview_text_summary" android:dependency="gesture_input" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/gesture_preview_trail" android:key="pref_gesture_preview_trail" android:dependency="gesture_input" android:defaultValue="true" />
</PreferenceScreen>