<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_screen_advanced" android:key="screen_advanced"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:latin="http://schemas.android.com/apk/res/com.android.inputmethod.latin">
    <ListPreference android:title="@string/key_preview_popup_dismiss_delay" android:key="pref_key_preview_popup_dismiss_delay" />
    <com.android.inputmethod.latin.settings.SeekBarDialogPreference android:title="@string/prefs_keypress_vibration_duration_settings" android:key="pref_vibration_duration_settings" latin:maxValue="@integer/config_max_vibration_duration" />
    <com.android.inputmethod.latin.settings.SeekBarDialogPreference android:title="@string/prefs_keypress_sound_volume_settings" android:key="pref_keypress_sound_volume" latin:maxValue="100" />
    <com.android.inputmethod.latin.settings.SeekBarDialogPreference android:title="@string/prefs_key_longpress_timeout_settings" android:key="pref_key_longpress_timeout" latin:maxValue="@integer/config_max_longpress_timeout" latin:minValue="@integer/config_min_longpress_timeout" latin:stepValue="@integer/config_longpress_timeout_step" />
    <CheckBoxPreference android:persistent="true" android:title="@string/prefs_enable_emoji_alt_physical_key" android:key="pref_enable_emoji_alt_physical_key" android:summary="@string/prefs_enable_emoji_alt_physical_key_summary" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/show_setup_wizard_icon" android:key="pref_show_setup_wizard_icon" android:summary="@string/show_setup_wizard_icon_summary" />
    <PreferenceScreen android:persistent="true" android:title="Debug settings" android:key="screen_debug" android:defaultValue="false" android:fragment="com.android.inputmethod.latin.settings.DebugSettingsFragment" />
</PreferenceScreen>